force-app/main/default/objects/Incident__c/Incident__c.object-meta.xml
<CustomObject>
    <label>Incident</label>
    <pluralLabel>Incidents</pluralLabel>
    <nameField>
        <label>Incident Number</label>
        <type>AutoNumber</type>
        <displayFormat>INC-{0000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Tracks active security incidents linked to a Threat in ThreatPulse.</description>
</CustomObject>