force-app/main/default/objects/Incident__c/fields/Assigned_Analyst__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Analyst__c</fullName>
    <label>Assigned Analyst</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Incidents (Assigned Analyst)</relationshipLabel>
    <relationshipName>Incidents_Assigned</relationshipName>
</CustomField>