force-app/main/default/objects/Incident__c/fields/Detected_Date__c.field-meta.xml
<CustomField>
    <fullName>Detected_Date__c</fullName>
    <label>Detected Date</label>
    <type>DateTime</type>
</CustomField>