force-app/main/default/objects/Incident__c/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <label>Severity</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>P1 - Critical</fullName>
            </value>
            <value>
                <fullName>P2 - High</fullName>
            </value>
            <value>
                <fullName>P3 - Medium</fullName>
                <default>true</default>
                <label>P3 - Medium</label>
            </value>
            <value>
                <fullName>P4 - Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>