force-app/main/default/objects/Incident__c/fields/Threat__c.field-meta.xml
<CustomField>
    <fullName>Threat__c</fullName>
    <label>Threat</label>
    <type>Lookup</type>
    <referenceTo>Threat__c</referenceTo>
    <relationshipLabel>Incidents</relationshipLabel>
    <relationshipName>Incidents</relationshipName>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>