force-app/main/default/objects/Incident__c/validationRules/Resolved_Date_Not_Before_Detection.validationRule-meta.xml
<ValidationRule>
    <fullName>Resolved_Date_Not_Before_Detection</fullName>
    <active>true</active>
    <description>Resolved Date cannot be earlier than the Detected Date.</description>
    <errorConditionFormula>NOT(ISBLANK(Resolved_Date__c)) &amp;&amp; NOT(ISBLANK(Detected_Date__c)) &amp;&amp; Resolved_Date__c &lt; Detected_Date__c</errorConditionFormula>
    <errorMessage>Resolved Date cannot be earlier than the Detected Date.</errorMessage>
    <errorDisplayField>Resolved_Date__c</errorDisplayField>
</ValidationRule>